@@ -1,5 +1,11 @@
 2007-05-19  Christian Persch  <chpe@gnome.org>
 
+	* embed/mozilla/GeckoCookiePromptService.cpp:
+
+	Just use ngettext here, no need for dngettext.
+
+2007-05-19  Christian Persch  <chpe@gnome.org>
+
 	* embed/ephy-cookie-manager.h:
 	* embed/mozilla/EphySingle.cpp:
 
